--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
     <div style="text-align:center;" class="container center-align">
         <h3 id="team">↓画像をクリックしてマップに移る。</h3>
             <div class="map-png">
-                 <a href=""><img src="./campus-map.png" alt="Colorful campus map showing buildings and pathways, designed for event navigation. The map includes labeled areas and event locations. The environment appears lively and welcoming, with clear layout for easy orientation."></a>
+                 <a href="https://coderk-star.github.io/ReiryoMap/"><img src="./campus-map.png" alt="A Map image."></a>
             </div>
     </div>
 
-    <h2 id="about" class="first accordion-header" data-target="#about-content">
+    <h2 id="about" class="accordion-header" data-target="#about-content">
         <span class="icon">+</span>麗陵際について</h2>
     <div class="container left-align accordion-content" id="about-content">
         <p>　麗澤大学の麗陵祭（れいりょうさい）は、毎年秋に開催される学生主体の学園祭で、地域の方々にも広く開かれた交流の場です。キャンパス全体が華やかに彩られ、模擬店、ステージパフォーマンス、展示企画など多彩なイベントが展開されます。学生団体による発表や、国際色豊かなブースもあり、麗澤大学ならではのグローバルな雰囲気を体感できます。</p>
@@ -67,7 +67,7 @@
         <p>　学びと楽しさが融合した麗陵祭は、麗澤大学の魅力を存分に味わえる特別な2日間です。ぜひ一度、足を運んでみてください。</p>
     </div>
 
-    <h2 id="feature" class="second accordion-header" data-target="#feature-content">
+    <h2 id="feature" class="accordion-header" data-target="#feature-content">
         <span class="icon">+</span>麗陵際の目玉企画とは？</h2>
     <div class="container  left-align accordion-content" id="feature-content">
         <p>　麗澤大学の麗陵祭では、毎年多彩な企画が展開されますが、特に注目を集める「目玉企画」は、人気芸人によるお笑いライブです。近年は「ガンバレルーヤ」「アインシュタイン」「きしたかの」など、テレビでも活躍する芸人が出演し、会場は笑いと熱気に包まれます。</p>
@@ -83,6 +83,14 @@
         <iframe src="https://yohman.github.io/directions/?route=reitaku&year=2023" width="1000" class="map-frame" style="border:0;" allowfullscreen loading="lazy"></iframe>
     </div>
 
+    <h2 id="introduction" class="accordion-header" data-target="introduction-content">
+        <span class="icon">+</span>その他
+    </h2>
+    <div class="container left-align accordion-content" id="introduction-content">
+        <h3　href="">制作チームの紹介はこちら。</h3>
+        <p>　このサイトは、麗陵祭のイベントマップと関連情報を提供するために作成されました。学生や来場者がスムーズにイベントを楽しめるよう、アクセス方法や注目企画の紹介、道のりシミュレータなど、多彩なコンテンツを用意しています。</p>
+        <p>　このサイトが、麗陵祭の魅力をより多くの人に伝え、楽しい思い出作りに貢献できれば幸いです。ぜひご活用ください。</p>
+    </div>
 <script>
   window.addEventListener('load', function () {
     const wrapper = document.getElementById('simulator-content');
