--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
         <span class="icon">+</span>その他
     </h2>
     <div class="container left-align accordion-content" id="introduction-content">
-        <h3　href="">制作チームの紹介はこちら。</h3>
-        <p>　このサイトは、麗陵祭のイベントマップと関連情報を提供するために作成されました。学生や来場者がスムーズにイベントを楽しめるよう、アクセス方法や注目企画の紹介、道のりシミュレータなど、多彩なコンテンツを用意しています。</p>
-        <p>　このサイトが、麗陵祭の魅力をより多くの人に伝え、楽しい思い出作りに貢献できれば幸いです。ぜひご活用ください。</p>
+        <p href="">制作チームの紹介はこちら。</p>
+        <p>　※このサイトは、麗陵祭のイベントマップと関連情報を提供するために作成されました。学生や来場者がスムーズにイベントを楽しめるよう、アクセス方法や注目企画の紹介、道のりシミュレータなど、多彩なコンテンツを用意しています。このサイトが、麗陵祭の魅力をより多くの人に伝え、楽しい思い出作りに貢献できれば幸いです。ぜひご活用ください。</p>
     </div>
 <script>
   window.addEventListener('load', function () {
