introduction was added.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li>・<a href="#about">麗陵際について</a></li>
             <li>・<a href="#feature">麗陵際の目玉企画とは？</a></li>
             <li>・<a href="#simulator">道のりシミュレータ</a></li>
+            <li>・<a href="#introduction">その他</a></li>
         </ul>
     </nav>
 
