--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div style="text-align:center;" class="container center-align">
         <h3 id="team">↓画像をクリックしてマップに移る。</h3>
             <div class="map-png">
-                 <a href="https://coderk-star.github.io/ReiryoMap/"><img src="./campus-map.png" alt="A Map image."></a>
+                 <a href="https://coderk-star.github.io/ReiryoMap/"><img src="./IMG_5.jpg" alt="A Map image."></a>
             </div>
     </div>
 
@@ -87,7 +87,7 @@
         <span class="icon">+</span>その他
     </h2>
     <div class="container left-align accordion-content" id="introduction-content">
-        <p href="">制作チームの紹介はこちら。</p>
+        <p href="">制作　　河野洋ゼミ一同。</p>
         <p>　※このサイトは、麗陵祭のイベントマップと関連情報を提供するために作成されました。学生や来場者がスムーズにイベントを楽しめるよう、アクセス方法や注目企画の紹介、道のりシミュレータなど、多彩なコンテンツを用意しています。このサイトが、麗陵祭の魅力をより多くの人に伝え、楽しい思い出作りに貢献できれば幸いです。ぜひご活用ください。</p>
     </div>
 <script>
