--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header role="banner">
-        <h1>麗陵際Map</h1>
+        <h1>麗陵祭Map</h1>
         <h3><a style="text-decoration: none; color: white;" href="https://www.reitaku-u.ac.jp/about/access/">会場までのアクセス</a></h3>  
     </header>
 
@@ -34,8 +34,8 @@
     <nav class="toc" aria-label="目次">
         <ul> 
             <li>・<a href="#map">イベントマップ詳細</a></li>
-            <li>・<a href="#about">麗陵際について</a></li>
-            <li>・<a href="#feature">麗陵際の目玉企画とは？</a></li>
+            <li>・<a href="#about">麗陵祭について</a></li>
+            <li>・<a href="#feature">麗陵祭の目玉企画とは？</a></li>
             <li>・<a href="#simulator">道のりシミュレータ</a></li>
             <li>・<a href="#introduction">その他</a></li>
         </ul>
@@ -60,7 +60,7 @@
     </div>
 
     <h2 id="about" class="accordion-header" data-target="#about-content">
-        <span class="icon">+</span>麗陵際について</h2>
+        <span class="icon">+</span>麗陵祭について</h2>
     <div class="container left-align accordion-content" id="about-content">
         <p>　麗澤大学の麗陵祭（れいりょうさい）は、毎年秋に開催される学生主体の学園祭で、地域の方々にも広く開かれた交流の場です。キャンパス全体が華やかに彩られ、模擬店、ステージパフォーマンス、展示企画など多彩なイベントが展開されます。学生団体による発表や、国際色豊かなブースもあり、麗澤大学ならではのグローバルな雰囲気を体感できます。</p>
         <p>　また、地元企業や団体との連携企画も充実しており、地域とのつながりを深める貴重な機会となっています。子どもから大人まで楽しめる内容が盛りだくさんで、毎年多くの来場者で賑わいます。</p>
@@ -68,7 +68,7 @@
     </div>
 
     <h2 id="feature" class="accordion-header" data-target="#feature-content">
-        <span class="icon">+</span>麗陵際の目玉企画とは？</h2>
+        <span class="icon">+</span>麗陵祭の目玉企画とは？</h2>
     <div class="container  left-align accordion-content" id="feature-content">
         <p>　麗澤大学の麗陵祭では、毎年多彩な企画が展開されますが、特に注目を集める「目玉企画」は、人気芸人によるお笑いライブです。近年は「ガンバレルーヤ」「アインシュタイン」「きしたかの」など、テレビでも活躍する芸人が出演し、会場は笑いと熱気に包まれます。</p>
         <p>　ライブは両日開催され、整理券の配布や立ち見エリアの設置など、来場者の利便性にも配慮されています。</p>
